# spark-eventlog-mcp

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_zh.md  pyproject.toml  requirements.txt  start.py
.github/workflows/: publish-to-pypi.yml  test-build.yml
.kiro/specs/fix-mcp-server-errors/: design.md  requirements.md  tasks.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
report_data/: .gitkeep
src/spark_eventlog_mcp/: __init__.py  server.py
src/spark_eventlog_mcp/core/: mature_data_loader.py
src/spark_eventlog_mcp/models/: __init__.py  mature_models.py  schemas.py
src/spark_eventlog_mcp/tools/: __init__.py  mature_analyzer.py  mature_report_generator.py  mcp_tools.py
src/spark_eventlog_mcp/utils/: __init__.py  helpers.py  middleware.py  uvicorn_config.py
