[project]
name = "spark-eventlog-mcp"
version = "1.0.0"
description = "A comprehensive Spark event log analysis MCP server with performance monitoring and optimization recommendations"
requires-python = ">=3.12"
authors = [
    {name = "Spark Analytics Team", email = "team@example.com"}
]
keywords = ["spark", "eventlog", "analysis", "mcp", "performance", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Distributed Computing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "aiofiles",
    "httpx",
    "boto3",
    "botocore",
    "pandas",
    "numpy",
    "plotly",
    "jinja2",
    "fastapi>=0.123.9",
    "aiohttp>=3.13.2",
]
readme = "README.md"
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/yhyyz/spark-eventlog-mcp"
"Repository" = "https://github.com/yhyyz/spark-eventlog-mcp"
"Documentation" = "https://github.com/yhyyz/spark-eventlog-mcp#readme"
"Bug Reports" = "https://github.com/yhyyz/spark-eventlog-mcp/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
]

[project.scripts]
spark-eventlog-mcp = "spark_eventlog_mcp.server:main"
